[package]
name = "union_peaks"
version = "0.1.0"
edition = "2021"

[lib]
name = "union_peaks"
path = "src/libs.rs"

[[bin]]
name = "union_peaks"
path = "src/bin/union_peaks.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.0"
clap = { version = "3.0.14", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
avl = "0.7"